--- a/resources/assets/sass/profile/profile.scss
+++ b/resources/assets/sass/profile/profile.scss
@@ -1,18 +1,4 @@
-$font-exo: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
-$font-sans: 'Open Sans', 'Droid Sans', sans-serif;
-
-$color-white: #ffffff;
-$color-white-hover: darken($color-white, 20%);
-
-$color-blue-nav: #99ccff;
-$color-blue-nav-hover: lighten($color-blue-nav, 10%);
-
-$color-blue: #4a7fb3;
-$color-blue-hover: lighten($color-blue, 10%);
-$color-green: #71aa30;
-$color-green-hover: lighten($color-green, 10%);
-
-$color-text-box: #999999;
+@import "variables";
 .profile {
   overflow: hidden;
   .alert {
@@ -26,7 +12,7 @@ $color-text-box: #999999;
   }
   .profile-table {
     table {
-      width: 90%;
+      width: 100%;
       margin-top: 10px;
 
       th {
@@ -47,7 +33,7 @@ $color-text-box: #999999;
   }
   .profile-2table {
     table {
-      width: 90%;
+      width: 100%;
       margin-top: 10px;
 
       th {
@@ -198,440 +184,11 @@ $color-text-box: #999999;
     float: right;
     padding: 20px 30px;
     width: 75%;
-    min-height: 690px;
+    min-height: 600px;
 
-    form {
-      label {
-        font-weight: normal;
-        font-size: 13px;
-        color: $color-blue;
-        font-family: $font-sans;
-      }
-
-      input[disabled] {
-        background-color: #FFF;
-        border: none;
-        font-size: 14px;
-        padding: 0;
-        box-shadow: none;
-      }
-
-      .form-control {
-        border-radius: 6px;
-        color: $color-text-box;
-        font-family: $font-sans;
-        font-size: 12px;
-        height: 25px;
-        line-height: 25px;
-        padding: 1px;
-      }
-      .form-control {
-        margin-left: -10px;
-        text-indent: 8px;
-        width: calc(100% + 10px);
-        &[disabled] {
-          margin: 0;
-          text-indent: 0;
-        }
-      }
-
-      .input-group {
-        width: 100%;
-
-        i {
-          position: absolute;
-          top: 5px;
-        }
-      }
-
-      input[type="submit"] {
-        background: $color-green;
-        border-radius: 6px;
-        border: none;
-        color: $color-white;
-        float: right;
-        font-family: $font-sans;
-        font-size: 13px;
-        font-weight: bold;
-        height: 25px;
-        padding: 0 15px;
-        &:hover {
-          background-color: $color-green-hover;
-        }
-      }
-
-      select {
-        border: 1px solid #ccc;
-        border-radius: 6px;
-        line-height: 21px;
-        -ms-progress-appearance: unset !important;
-        -webkit-appearance: none !important;
-        -moz-appearance: none !important;
-        background: url("/assets/portal/img/combodown.gif") no-repeat right #fff !important;
-      }
-
-      .warning-color {
-        font-size: 12px;
-      }
-
-      .upload {
-        img {
-          width: 100%;
-          height: auto;
-        }
-      }
-
-      .icons {
-        font-size: 12px;
-        img {
-          width: auto;
-          height: 40px;
-        }
-      }
-    }
-
-    .center {
-      float: left;
-      margin-top: 22px;
-      width: 90%;
-      // height: 300px;
-
-      .grupo {
-        margin-bottom: 20px;
-
-        .grupo-title {
-
-          width: calc(100% / 4);
-          float: left;
-          font-family: $font-sans;
-          color: $color-blue;
-          font-weight: bold;
-          font-size: 14px;
-        }
-        .grupo-title.disabled {
-
-          color: grey;
-        }
-
-        label {
-
-        }
-        input .settings-switch{
-          background-color:#4a7fb3 !important;
-        }
-
-        input {
-          text-align: center;
-          margin-left: -10px;
-          height: 28px;
-
-          border: 1px solid lightgrey;
-          border-radius: 6px;
-          background-color: #FFF;
-          color: gray;
-          font-size: 14px;
-
-          padding-left: 10px;
-
-        }
-        input.disabled {
-          text-align: center;
-          border: none;
-          float: left;
-          font-weight: bold;
-          margin-left: -10px;
-          height: 28px;
-
-          background-color: #FFF;
-          color: gray;
-          font-size: 14px;
-          margin-bottom: 10px;
-          padding-left: 10px;
-        }
-        input[type="submit"] {
-          font-family: $font-exo;
-          font-weight: bold;
-          font-size: 13px;
-          color: $color-white;
-          float: right;
-          background: $color-green;
-          height: 25px;
-          border: none;
-          border-radius: 6px;
-          width: 85px;
-          margin-right: 20px;
-          margin-top: 20px;
-          margin-bottom:20px;
-        }
-      }
-
-      .texto {
-        margin-top: 10px;
-        font-family: $font-sans;
-        color: gray;
-        font-size: 12px;
-      }
-      .title2{
-        font-family: $font-sans;
-        color: grey;
-        font-weight: bold;
-        font-size: 16px;
-      }
-
-      .title {
-        font-family: $font-sans;
-        color: $color-blue;
-        font-weight: bold;
-        font-size: 14px;
-      }
-      table{
-        width:100%;
-      }
-      .borderless td, .borderless th {
-        border: none;
-        color:grey;
-        font-size:14px;
-      }
-
-    }
-
-    .left {
-      float: left;
-      width: calc(100% / 2);
-      img.icon{
-        margin-top:-20px;
-        position:absolute;
-        margin-left:140px;
-      }
-
-      .valido{
-        font-family: $font-sans;
-        color: $color-green;
-        font-size: 14px;
-      }
-      .pendente{
-        font-family: $font-sans;
-        color: darkorange;
-        font-size: 14px;
-      }
-      .invalido{
-        font-family: $font-sans;
-        color: darkred;
-        font-size: 14px;
-      }
-
-      .title {
-        font-family: $font-sans;
-        color: $color-blue;
-        font-weight: bold;
-        font-size: 14px;
-      }
-      .input-title {
-        margin-top: 10px;
-        font-size: 13px;
-        color: $color-blue;
-        font-family: $font-sans;
-      }
-      input {
-        margin-left: -10px;
-        width: 200px;
-        height: 28px;
-        margin-top: 5px;
-        border: 1px solid lightgrey;
-        border-radius: 6px;
-        background-color: #FFF;
-        color: dimgrey;
-        font-size: 14px;
-        margin-bottom: 10px;
-        padding-left: 10px;
-
-      }
-
-      input[type="submit"] {
-        font-family: $font-exo;
-        font-weight: bold;
-        font-size: 13px;
-        color: $color-white;
-        float: right;
-        background: $color-green;
-        height: 25px;
-        border: none;
-        border-radius: 6px;
-        width: 85px;
-        margin-right: 20px;
-        margin-top: 20px;
-        margin-bottom:20px;
-      }
-    }
-    .profright {
-
-      float: left;
-      width: calc(100% / 2);
-
-      img.icon{
-        margin-top:-20px;
-        position:absolute;
-        margin-left:140px;
-      }
-      .valido{
-        font-family: $font-sans;
-        color: $color-green;
-        font-size: 14px;
-      }
-      .pendente{
-        font-family: $font-sans;
-        color: darkorange;
-        font-size: 14px;
-      }
-      .invalido{
-        font-family: $font-sans;
-        color: darkred;
-        font-size: 14px;
-      }
-      .title {
-        font-family: $font-sans;
-        color: $color-blue;
-        font-weight: bold;
-        font-size: 14px;
-      }
-      .input-title {
-        margin-top: 10px;
-        font-size: 13px;
-        color: $color-blue;
-        font-family: $font-sans;
-      }
-      input {
-        margin-left: -10px;
-        width: 200px;
-        height: 28px;
-        margin-top: 5px;
-        border: 1px solid lightgrey;
-        border-radius: 6px;
-        background-color: #FFF;
-        color: dimgrey;
-        font-size: 14px;
-        margin-bottom: 10px;
-        padding-left: 10px;
-
-      }
-      select {
-        margin-left: -10px;
-        width: 200px;
-        height: 28px;
-        margin-top: 5px;
-        border: 1px solid lightgrey;
-        border-radius: 6px;
-        color: dimgrey;
-        font-size: 14px;
-        margin-bottom: 10px;
-        padding-left: 10px;
-        appearance: none !important;
-        -webkit-appearance: none !important;
-        -moz-appearance: none !important;
-        background: url("/assets/portal/img/combodown.gif") no-repeat right #fff;
-      }
-      input.disabled {
-        margin-top: 5px;
-        border: none;
-        background-color: #FFF;
-        color: dimgrey;
-        font-size: 14px;
-        margin-bottom: 20px;
-      }
-      input[type="submit"] {
-        font-family: $font-exo;
-        font-weight: bold;
-        font-size: 13px;
-        color: $color-white;
-        float: right;
-        background: $color-green;
-        height: 25px;
-        border: none;
-        border-radius: 6px;
-        width: 85px;
-        margin-right: 20px;
-        margin-top: 20px;
-        margin-bottom:20px;
-
-      }
-      .profile-info {
-        font-size: 13px;
-        color: $color-blue;
-        font-family: $font-sans;
-      }
-    }
-
-    .profile-button-right {
-      margin-top: 20px;
-      float: right;
-    }
-    a{
-      color:$color-blue;
-    }
-    .title {
-      width:100%;
-      margin-bottom:10px;
-      margin-top:20px;
-      font-family: $font-sans;
-      color: $color-blue;
-      font-weight: bold;
-      font-size: 14px;
-    }
-    .texto{
-      width:90%;
-      font-family: $font-sans;
-      color:grey;
-      font-size:12px;
-    }
-    .old {
-      select.grande{
-        width:90% !important;
-      }
-      textarea{
-        color:grey;
-        width:100%;
-        height:150px;
-        font-size:12px;
-        font-weight:normal;
-      }
-      input {
-        margin-left: -10px;
-        width: 200px;
-        height: 28px;
-        margin-top: 5px;
-        border: 1px solid lightgrey;
-        border-radius: 6px;
-        background-color: #FFF;
-        color: dimgrey;
-        font-size: 14px;
-        margin-bottom: 10px;
-        padding-left: 10px;
-
-
-      }
-      input[type="number"] {
-
-        width: 50px;
-        height: 28px;
-        margin-top: 5px;
-        border: 1px solid lightgrey;
-        border-radius: 6px;
-        background-color: #FFF;
-        color: grey;
-        font-size: 14px;
-        margin-bottom: 10px;
-        padding-left: 10px;
-        -webkit-appearance: none;
-        -moz-appearance: none;
-        appearance: none;
-
-      }
-      span{
-        color:grey;
-        font-size:12px;
-
-      }
-    }
+    @import "./form";
+    @import "./bank";
+    @import "./old";
   }
 
   > .profile-footer {
