--- a/resources/assets/sass/global/_variables.scss
+++ b/resources/assets/sass/global/_variables.scss
@@ -13,3 +13,6 @@ $color-green: #71aa30;
 $color-green-hover: lighten($color-green, 10%);
 
 $color-text-box: #999999;
+
+$cor-verde-submit: #71aa30;
+$border-radius: 6px;
