--- a/resources/assets/sass/profile/profile.scss
+++ b/resources/assets/sass/profile/profile.scss
@@ -1,10 +1,11 @@
-@import "variables";
+@import "../global/variables";
 .profile {
   overflow: hidden;
   .alert {
     float: left;
     color: black;
     padding-top: 10px;
+    width: 100%;
   }
   .alert-info {
     font-size: 11px;
@@ -155,7 +156,7 @@
       border: 0;
       color: dimgrey;
       float: left;
-      font-family: $font-exo;
+      font-family: $font-sans;
       font-size: 15px;
       line-height: 40px;
       padding: 0;
