--- a/resources/assets/sass/profile/_bank.scss
+++ b/resources/assets/sass/profile/_bank.scss
@@ -24,7 +24,34 @@
     }
   }
 }
+.withdraw-bank {
+  .iban {
+    padding-left: 40px;
+  }
+  select {
+    font-size: 12px;
+    font-family: $font-fixed;
+    color: $color-text-box;
+    width: 100%;
+    text-indent: 2px;
+  }
+}
+.withdraw-amount{
+  padding-top: 10px;
+  margin-left: -5px;
+  margin-right: -5px;
 
+  .col-xs-3,
+  .col-xs-4,
+  .col-xs-5,
+  .col-xs-12 {
+    padding: 0 5px;
+  }
+  input {
+    width: 100%;
+  }
+  .
+}
 .bank {
   table.mini {
     font-family: $font-sans;
